--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
 }
 .input-conatiner {
-  width: 1000px;
+  width: 80%;
   margin: 30px auto;
   display: flex;
   align-items: center;
@@ -72,7 +72,7 @@ body {
 }
 
 .table-container {
-  width: 1000px;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,3 +104,16 @@ tbody tr {
 tbody tr:hover {
   background: #014055;
 }
+
+@media only screen and (max-width: 600px) {
+  .table-container {
+    width: 100%;
+    
+  }
+
+  .input-conatiner {
+    width:100%;
+  }
+
+}
+
